syntax = "proto3";

package types;

option go_package = "github.com/tinyci/ci-agents/ci-gen/grpc/types";

import "google/protobuf/struct.proto";

// RunSettings covers all the features that tinyCI supports to manage runs and
// execute them.
message RunSettings {
  repeated  string                  command     = 1; // Command is the command in execv() form (array of strings)
            string                  image       = 2; // Image is an arbitrary image name, the overlay runner needs docker registry format
            string                  queue       = 3; // Queue is the name of the queue this run should be placed in.
            google.protobuf.Struct  metadata    = 4; // Metadata is a free form grab-bag of properties for runners to use.
            string                  name        = 5; // Name is the name of the run
            int64                   timeout     = 6; // Timeout is the timeout, in seconds, to wait before automatically canceling a run.
            Resources               resources   = 7; // Resource constraint values
            bool                    privileged  = 8; // use a privileged container to run this test?
  repeated  string                  env         = 9; // environment variables
}

// Resources covers resource constraints that a runner might act on. It is
// voluntary for a runner to take these values into consideration. It is also
// up to the runner to interpret these values, and will differ between
// different runners.
message Resources {
  string cpu    = 1; // cpu utilization
  string memory = 2; // memory available
  string disk   = 3; // disk available
  string iops   = 4; // iops available
}
